[gd_scene load_steps=12 format=3 uid="uid://fhcnakn4moa3"]

[ext_resource type="Script" uid="uid://bblufhdxldp8k" path="res://scripts/astroid.gd" id="1_1b6ih"]
[ext_resource type="Texture2D" uid="uid://btu8a6kemvc8y" path="res://assets/images/Meteors.png" id="1_rbjxg"]
[ext_resource type="Texture2D" uid="uid://dovh5xykxckvq" path="res://assets/images/Debris.png" id="3_43mww"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1b6ih"]
atlas = ExtResource("1_rbjxg")
region = Rect2(6, 7, 19, 19)

[sub_resource type="CircleShape2D" id="CircleShape2D_43mww"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rbjxg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xg2bh"]
atlas = ExtResource("3_43mww")
region = Rect2(12, 11, 7, 6)

[sub_resource type="Curve" id="Curve_43mww"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.6744187, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_1b6ih"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rbjxg"]
resource_name = "rotate"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.1415927, 6.2831855]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43mww"]
_data = {
&"RESET": SubResource("Animation_1b6ih"),
&"rotate": SubResource("Animation_rbjxg")
}

[node name="Astroid" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_1b6ih")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_1b6ih")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_43mww")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_rbjxg")
debug_color = Color(0.81286573, 0.38976815, 0.34787357, 0.41960785)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
texture = SubResource("AtlasTexture_xg2bh")
one_shot = true
explosiveness = 1.0
randomness = 1.0
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 300.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
scale_amount_min = 0.0
scale_amount_curve = SubResource("Curve_43mww")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-3, -4)
rect = Rect2(-36, -31, 78, 72)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_43mww")
}
autoplay = "rotate"

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="finished" from="CPUParticles2D" to="." method="_on_cpu_particles_2d_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
